# deptective

./: .envrc  .gitignore  CODEOWNERS  Dockerfile  Makefile  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: lint.yml  pip-audit.yml  release.yml  tests.yml
apt_trace/: __init__.py  __main__.py  apt.py  cache.py  cli.py  containers.py  dependencies.py  exceptions.py  logger.py  logs.py  package_manager.py  signals.py  strace.py  syscalls.py
apt_trace/apt-strace/: Dockerfile  apt-strace.c
apt_trace/strace/: apt-strace
deptective/: __init__.py  apt.py  cache.py  cli.py  containers.py  dependencies.py
deptective/strace/: deptective-files-exist
examples/jq/: Dockerfile
test/: test_containers.py  test_logging.py  test_multi_step.py  test_package_mapping.py  test_strace.py  test_syscall_parser.py
