[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "deptective"
authors = [{name = "Trail of Bits", email = "opensource@trailofbits.com"}]
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities"
]
dependencies = [
    "appdirs ~= 1.4.4",
    "docker ~= 6.1.3",
    "randomname ~= 0.2.1",
    "requests==2.32.2",  # workaround for this issue: https://github.com/docker/docker-py/issues/3256
    "rich ~= 13.4.2"
]
requires_python = ">=3.10"

[project.scripts]
deptective = "deptective.__main__:main"

[project.urls]
Home = "https://github.com/trailofbits/deptective"

[project.optional-dependencies]
lint = [
    "ruff",
    "black",
    "mypy",
]
dev = ["apt_trace[lint]", "twine"]

[tool.mypy]
ignore_missing_imports = true
